backend: rewrite WebSocketAuthInterceptor in a cleaner way